--- a/package.json
+++ b/package.json
@@ -65,6 +65,6 @@
     "url": "git+https://github.com/LekoArts/gatsby-starter-portfolio-emilia.git"
   },
   "scripts": {
-    "deploy": "gatsby build --prefix-paths && gh-pages -b master -d public"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   }
 }
